clusters/my-cluster/manifests/authelia/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: authelia
  labels:
    app.kubernetes.io/name: authelia
