clusters/my-cluster/manifests/authelia/authelia-deployments.yml
apiVersion: v1
kind: Namespace
metadata:
  name: authelia
  labels:
    app.kubernetes.io/name: authelia


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authelia
  namespace: authelia
  labels:
    app: authelia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authelia
  template:
    metadata:
      labels:
        app: authelia
    spec:
      containers:
      - name: authelia
        image: authelia/authelia:4.9 #  <----- You should use an explicit version here docker pull 
        imagePullPolicy: Always
        ports:
        - containerPort: 9091
        volumeMounts:
        - name: config-volume
          mountPath: /etc/authelia
        - name: dbvolume
          mountPath: /var/lib/authelia       
      volumes:
      - name: dbvolume
        emptyDir:
          {}
      - name: config-volume
        configMap:
          name: authelia-config
          items:
          - key: configuration.yml
            path: configuration.yml
          - key: users.yaml
            path: users.yaml           

---
apiVersion: v1
kind: Service
metadata:
  name: authelia-service
  namespace: authelia
spec:
  selector:
    app: authelia
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9091

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authelia-ingress
  namespace: authelia
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - secretName: authelia-ingress-tls
    hosts:
    - auth.dummy-service.com
  rules:
  - host: auth.dummy-service.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: authelia-service
          servicePort: 80
