clusters/my-cluster/manifests/authelia/deployments.yml
apiVersion: v1
kind: Namespace
metadata:
  name: authelia
  labels:
    app.kubernetes.io/name: authelia


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authelia
  namespace: authelia
  labels:
    app: authelia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authelia
  template:
    metadata:
      labels:
        app: authelia
      spec:
        volumes:
        - name: authelia-conf
          persistentVolumeClaim:
            claimName: authconf
        containers:
        - name: authelia
          image: clems4ever/authelia
          ports:
          - containerPort: 8080
          volumeMounts:
          - name: authconf
            mountPath: /etc/authelia   

---
apiVersion: v1
kind: Service
metadata:
  name: authelia-service
  namespace: authelia
spec:
  selector:
    app: authelia
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 9091

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authelia-ingress
  namespace: authelia
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  # tls:
  # - secretName: authelia-ingress-tls
  #   hosts:
  #   - auth.dummy-service.com
  rules:
  - host: auth.dummy-service.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: authelia-service
            port:
              number: 80
